fixed comet chat issue & Dutch import issue

--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1266,7 +1266,7 @@
 		"specialist": "Specialist",
 		"previous": "Vorige",
 		"next": "Volgende",
-		"journal": "Dagboek",
+		"journal": "Logboek",
 		"vdo_calls": "Video-calls",
 		"add_new_entry": "Voer een nieuwe invoer in",
 		"entry": "invoer",
