--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1096,16 +1096,82 @@
 		"Search": "Tafuta",
 		"Date_of_event": "Tarehe ya tukio",
 		"consultancy_appintment": "Uteuzi wa Ushauri",
-		"pin_greater_then_4" : "PIN lazima iwe kubwa zaidi ya herufi 3",
-		"unblock_user":"Futa Mtumiaji",
-		"block_user":"Zuia Mtumiaji",
-		"Options":"Chaguzi",
-		"had_miss_call_from":" alikuwa amekosa simu kutoka ",
+		"pin_greater_then_4": "PIN lazima iwe kubwa zaidi ya herufi 3",
+		"unblock_user": "Futa Mtumiaji",
+		"block_user": "Zuia Mtumiaji",
+		"Options": "Chaguzi",
+		"had_miss_call_from": " alikuwa amekosa simu kutoka ",
 		"had_rejected_call": " alikuwa amekataa simu na ",
 		"had_joined_call_with": " alikuwa amejiunga na simu na ",
 		"had_initiated_call_with": " alikuwa ameanzisha simu na ",
 		"ended_call_with": " ilimaliza simu na ",
 		"cancelled_call_with": " Kughairiwa simu na ",
-		"minutes":"dakika"
+		"minutes": "dakika",
+		"enabled": "kuwezeshwa",
+		"disabled": "walemavu",
+		"are_u_sue_appo": "Je! Una uhakika unataka kuweka nafasi hii?",
+		"Appointment": "Uteuzi",
+		"activities": "Shughuli",
+		"Upcoming": "Inayokuja",
+		"Past": "Zamani",
+		"google_calendar": "Kalenda ya Google",
+		"outlook_calendar": "Kalenda ya Mtazamo",
+		"Calendar": "Kalenda",
+		"update_the_inquiry": "Sasisha uchunguzi?",
+		"remove_the_inquiry": "Je! Una uhakika wa kuondoa Uchunguzi huu?",
+		"sick_certificate_inquiry": "Uchunguzi wa Cheti cha Wagonjwa",
+		"second_opinion_inquiry": "Uchunguzi wa Maoni wa pili",
+		"medicine_inquiry": "Uchunguzi wa dawa",
+		"Approve": "Idhinisha",
+		"decline_inquiry": "Punguza Uchunguzi",
+		"Prescriptions": "Maagizo",
+		"Sick_Certificates": "Vyeti vya Wagonjwa",
+		"Second_Opinions": "Maoni ya pili",
+		"not_mention": "Sio kutaja",
+		"are_u_sure_patient": "Je! Una uhakika wa kumuondoa Mgonjwa?",
+		"error_in_getting": "Hitilafu katika kupata habari",
+		"plz_enter": "Tafadhali ingiza barua pepe au kitambulisho cha mgonjwa",
+		"patient_data_rqust": "Ombi la Takwimu za Wagonjwa",
+		"email_or_p_id": "Barua pepe au Kitambulisho cha Mgonjwa",
+		"invite_dr_to_aimedis": "Alika madaktari kwa lengo",
+		"emergency_access": "Upataji wa Dharura",
+		"invalid": "batili, tafadhali ingiza barua pepe halali",
+		"plz_enter_email": "Tafadhali ingiza barua pepe",
+		"all_field_complesry": "* Sehemu zote ni compplersury",
+		"track_added": "Ufuatiliaji umeongezwa kwa mafanikio",
+		"you_can": "Unaweza kuingiza anwani nyingi za barua pepe kwa kuweka ',' na kama ujumbe wa kibinafsi",
+		"enter_email_with": "Ingiza barua pepe na, seprator",
+		"shortmsg_optional": "Ujumbe mfupi (hiari)",
+		"search_pharma": "Tafuta duka la dawa kwa jina na kitambulisho",
+		"show_pharma": "Onyesha duka la dawa ndani ya eneo langu la",
+		"send_pres": "Tuma Dawa",
+		"latest_infor": "Habari za hivi punde",
+		"consultan": "Ushauri (kalenda ya kawaida)",
+		"holidays": "Likizo",
+		"set_working_hours": "weka masaa ya kazi mkondoni",
+		"time_slots": "Nyakati za nyakati",
+		"Timeslot_duration": "Muda wa nyakati",
+		"Break_time_from": "Kuvunja wakati kutoka",
+		"Break_time_to": "Kuvunja wakati wa",
+		"up_to": "Hadi",
+		"before_the": "kabla ya wakati wa kuteuliwa",
+		"hours": "masaa",
+		"minuts": "dakika",
+		"services_appo": "Huduma na Uteuzi",
+		"lock": "Kufuli",
+		"home": "Nyumbani",
+		"chat": "Ongea",
+		"chat_call": "Piga gumzo na Piga simu",
+		"Courses": "Kozi",
+		"Select_place": "Chagua mahali",
+		"Search_city": "Tafuta (jiji)",
+		"plz_enter_correct_pass": "Tafadhali Ingiza Nenosiri Halali La Sasa",
+		"can_bot_be_same_pass": "Nenosiri la sasa na nywila mpya haziwezi kuwa sawa.",
+		"trusted_doctor": "Daktari anayeaminika",
+		"recommond_doctor": "Daktari aliyependekezwa",
+		"date_from": "Tarehe kutoka",
+		"date_to": "Tarehe ya",
+		"pls_fill_duration": "Tafadhali jaza muda wa miadi",
+		"offline": "Nje ya mtandao"
 	}
 }
