--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1152,6 +1152,8 @@
 		"date_from": "Data de",
 		"date_to": "Data para",
 		"pls_fill_duration": "Por favor, preencha o tempo de duração do compromisso",
-		"offline": "Desligado"
+		"offline": "Desligado",
+		"enabled":"ativado",
+		"disabled":"desativado"
 	}
 }
