--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1138,6 +1138,8 @@
     "date_from": "Дата, с",
     "date_to": "Дата до",
     "pls_fill_duration": "Пожалуйста, заполните поле Время приема",
-    "offline": "Не в сети"
+    "offline": "Не в сети",
+    "enabled":"включен",
+		"disabled":"отключен"
   }
 }
