--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1158,6 +1158,9 @@
 		"dignoses": "诊断",
 		"addentry": "添加条目",
 		"nurology": "神经病学",
-		"pswd_not_valid": "密码无效"
+		"pswd_not_valid": "密码无效",
+		"InsurancecompanyError" : "请填写保险国家和保险公司",
+		"StartDate" :"开始日期",
+		"EndDate" :"结束日期"
 	}
 }
