fix loading in comet chat & filter in onlne course

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1163,6 +1163,8 @@
 		"StartDate" :"开始日期",
 		"EndDate" :"结束日期",
 		"enabled":"已启用",
-		"disabled":"残障人士"
+		"disabled":"残障人士",
+		"Loading":"载入中...",
+		"language_all":"语言：全部"
 	}
 }
