--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1143,6 +1143,8 @@
     "StartDate" :"Дата начала",
 		"EndDate" :"Дата окончания",
     "enabled":"включен",
-		"disabled":"отключен"
+    "disabled":"отключен",
+    "Loading":"Загружается ...",
+    "language_all":"Язык: Все"
   }
 }
