--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1177,6 +1177,7 @@
 		"pls_fill_duration": "Tafadhali jaza muda wa miadi",
 		"offline": "Nje ya mtandao",
 		"language_all":"Lugha: Zote",
-		"Loading":"Inapakia ..."
+		"Loading":"Inapakia ...",
+		"goto_top":"Nenda juu"
 	}
 }
