organ donor on blockchain, And remaining minor issues given by aakash

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -358,7 +358,7 @@
 		"situation": "Situation",
 		"selct_pain_area": "Select Pain areas",
 		"pain_areas": "Pain areas",
-		"temparture": "Temprature",
+		"temparture": "Temperature",
 		"saturation": "saturation",
 		"Location": "location",
 		"pain_type": "Pain type",
