--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -61,7 +61,7 @@
 		"profile_info": "Dies sind Ihre Profilinformationen, auf die Ärzte Ihres Vertrauens und diejenigen, mit denen Sie Ihre Profil-ID und PIN teilen, zugreifen können.",
 		"ID": "ID",
 		"speciality": "Fachbereich",
-		"pin": "STIFT",
+		"pin": "PIN",
 		"done": "Erledigt",
 		"browse": "Durchsuchen",
 		"or_drag_here": "oder hier hinziehen",
@@ -614,6 +614,9 @@
 		"capab_Doctors": "Ärztin",
 		"capab_Patients": "Geduldig",
 		"Nurse": "Krankenschwester",
+		"capab_Doctors1": "Ärzte/-innen",
+		"capab_Patients1": "Patient",
+		"Nurse1": "Pflege",
 		"Pharmacist": "Apothekerin",
 		"Professional": "Fachfrau",
 		"Appointmentiscanceled": "Termin wird abgesagt",
@@ -1019,7 +1022,7 @@
 		"are_u_sure_remove_inquiry": "Sind Sie sicher, diese Anfrage zu entfernen?",
 		"srvcs_appointment": "Dienstleistungen & Termine",
 		"Security": "Sicherheit",
-		"date_time": "Terminzeit",
+		"date_time": "Zeit & Datum",
 		"enter_patient_id": "Geben Sie die Patienten-ID ein",
 		"reg_number_if_aplicble": "Registrierungsnummer (falls zutreffend)",
 		"select_specility": "Wählen Sie Spezialität",
@@ -1139,12 +1142,15 @@
 		"cancelled_call_with": " hat den Anruf mit abgebrochen ",
 		"addentry": "Eintrag hinzufügen",
 		"InsurancecompanyError" : "Bitte füllen Sie das Versicherungsland und die Versicherungsgesellschaft aus",
-		"StartDate" :"Anfangsdatum",
-		"EndDate" :"Endtermin",
+		"StartDate" :"Von",
+		"EndDate" :"Bis",
 		"enabled":"aktiviert",
 		"disabled":"behindert",
 		"Loading":"Wird geladen...",
 		"language_all":"Sprache: Alle",
-		"goto_top":"Zur Spitze gehen"
+		"goto_top":"Zur Spitze gehen",
+		"Consultancy_custom_calendar" : "Benutzerdefinierter Beratungskalender",
+		"Calling" :"Berufung...",
+		"incomingcall": "Eingehender Anruf"
 	}
 }
