--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1069,7 +1069,7 @@
 		"Date_of_event": "Date of event",
 		"consultancy_appintment": "Consultancy Appointment",
 		"pin_greater_then_4" : "PIN must be greater then 3 characters",
-		"are_u_sue_appo": "Are you sure you want to book this appoinment?",
+		"are_u_sue_appo": "Are you sure you want to book this appointment?",
 		"Appointment": "Appointment",
 		"activities": "Activities",
 		"Upcoming": "Upcoming",
@@ -1100,7 +1100,7 @@
 		"all_field_complesry": "*All field are compulsory",
 		"track_added": "Track added successfully",
 		"you_can": "You can enter multiple email address by putting ',' and as a personal message",
-		"enter_email_with": "Enter email with , seprator",
+		"enter_email_with": "Enter email with , seperator",
 		"shortmsg_optional": "Short message(optional)",
 		"search_pharma": "Search pharmacy by name and ID",
 		"show_pharma": "Show Pharmacy within my radius of",
@@ -1128,7 +1128,7 @@
 		"plz_enter_correct_pass": "Please Enter Valid Current Password",
 		"can_bot_be_same_pass": "Current password and new password can not be same.",
 		"trusted_doctor": "Trusted Doctor",
-		"recommond_doctor": "Recomended Doctor",
+		"recommond_doctor": "Recommended Doctor",
 		"date_from": "Date from",
 		"date_to": "Date to",
 		"pls_fill_duration": "Please fill the Time duration of appointment",
