--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -312,7 +312,7 @@
 		"attachments": "Pièces jointes",
 		"rqst_sent_succefully": "Demande envoyée avec succès",
 		"archive_journal": "Journal des archives",
-		"archive": "Archive",
+		"archive": "Archiver",
 		"about": "À propos de",
 		"sent_on": "Envoyé le",
 		"specialist": "Spécialiste",
@@ -358,7 +358,7 @@
 		"situation": "Situation",
 		"selct_pain_area": "Sélectionnez les zones de douleur",
 		"pain_areas": "Zones de douleur",
-		"temparture": "Temparture",
+		"temparture": "Température",
 		"saturation": "saturation",
 		"Location": "lieu",
 		"pain_type": "Type de douleur",
@@ -419,7 +419,7 @@
 		"to_be_consume": "À consommer à",
 		"reminder": "Rappel",
 		"reminder_time_taken": "Temps de rappel pris",
-		"notes": "Notes",
+		"notes": "Remarques",
 		"ongoing": "en cours",
 		"on_demand": "Sur demande",
 		"dosage": "Dosage",
@@ -485,7 +485,6 @@
 		"snd_push_notification_to_patient_emrgancy": "envoyer une notification 'push' au patient et au contact d'urgence",
 		"I_hrwith_cnfirm_that_i_need_access_patient": "Je confirme par la présente que j'ai besoin d'accéder aux données du patient en raison d'une situation d'urgence médicale ; le patient en sera informé",
 		"time_format": "Format de l'heure",
-		"date_format": "Format de la date",
 		"view_emrgncy_data": "Voir les données d'urgence",
 		"my_profile": "Mon profil",
 		"male": "Homme",
@@ -630,7 +629,7 @@
 		"sickcsrtificates": "Certificats de maladie",
 		"ScndOpinion": "Deuxièmes avis",
 		"Contact": "Contactez",
-		"Services": "Services",
+		"Services": "Prestations de service",
 		"latest_info": "Dernières informations",
 		"fors": "pour",
 		"Enteremailfirst": "Entrez d'abord votre adresse électronique",
@@ -1150,6 +1149,12 @@
 		"capab_Patients1": "Patiente",
 		"Nurse1": "Infirmière",
 		"enabled":"activée",
-		"disabled":"désactivée"
+		"disabled":"désactivée",
+		"Online": "en ligne",
+		"Offline": "hors ligne",
+		"Lao": "Dernière activité à:",
+		"consultancy_cstm_calnder": "Rendez-vous de consultation",
+		"language_all":"Langue: Tous",
+		"date_formatt": "صيغة التاريخ"
 	}
 }
