--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1152,6 +1152,9 @@
     "goto_top":"Наверх",
     "Consultancy_custom_calendar" : "Индивидуальный календарь консультации",
     "Calling" :"Вызов...",
-		"incomingcall": "Входящий звонок"
+    "incomingcall": "Входящий звонок",
+    "Online": "онлайн",
+		"Offline": "не в сети",
+		"Lao": "Последняя активность:"
   }
 }
