--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1776,6 +1776,9 @@
 		"goto_top":"Ga naar boven",
 		"Consultancy_custom_calendar" : "Consultancy aangepaste kalender",
 		"Calling" :"Roeping...",
-		"incomingcall": "Binnenkomend telefoongesprek"
+		"incomingcall": "Binnenkomend telefoongesprek",
+		"Online": "online",
+		"Offline": "offline",
+		"Lao": "Laatst actief om:"
 	}
 }
