--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1192,7 +1192,7 @@
 		"VaccinationTrial":"Jaribio la chanjo ya COVID-19",
 		"SARSCoV_2_TEST":"Mtihani wa Ag-Co-2 wa SARS",
 		"time_of_vaccination" :"Wakati wa Chanjo",
-		"Daydate":"Siku ya XYZ baada ya chanjo na tarehe",
+		"Daydate":"Idadi ya Siku baada ya chanjo",
 		"PositiveSARS" :"Mtihani mzuri wa SARS CoV-2 IgG, IgM, AG?",
 		"Chargenumberpicture" :"Chaji picha ya nambari",
 		"VaccinationCharge":"Malipo ya Chanjo",
